feat: 設備グラフィックガントの拡大率UIとテーマ連携を復元
リバートで欠落していた表示倍率スライダー・バー表示フォント・DesktopTheme による Canvas 配色を復旧。セッションにバーフォントを保存。